tests/NormalTests/paczka1/small_fuzzy/33737063.err
Error in line 3: 52oMgUCn4 A148 98,1
Error in line 12: 52oMgUCn4 S143 47,4
